--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,13 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
-        android:name=".activity.FarSharingApp"
+        android:name="ru.vsu.cs.farsharing.config.FarSharingApp"
         android:allowBackup="true"
         android:icon="@drawable/farsharing_icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/farsharing_icon"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.NewApp">
         <activity
             android:name=".activity.MenuActivity"
