--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.vsu.cs.farsharing">
+    package="ru.vsu.cs.farsharing" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
-        android:name="ru.vsu.cs.farsharing.config.FarSharingApp"
+        android:name=".config.FarSharingApp"
         android:allowBackup="true"
         android:icon="@drawable/farsharing_icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/farsharing_icon"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.NewApp">
+        android:theme="@style/Theme.NewApp"
+        android:usesCleartextTraffic="true" >
         <activity
             android:name=".activity.MenuActivity"
             android:exported="false" />
@@ -47,7 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".activity.WelcomeActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -59,6 +59,5 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
-
 
 </manifest>
