--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.vsu.cs.farsharing">
+    package="ru.vsu.cs.farsharing" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,17 +14,20 @@
         android:roundIcon="@drawable/farsharing_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewApp"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true" >
         <activity
-            android:name=".activity.add_car.AddCarActivity"
+            android:name=".activity.admin.client_list.ClientListActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.main.AdminMainActivity"
+            android:name=".activity.admin.add_car.AddCarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.admin.AdminMainActivity"
             android:exported="false" />
         <activity
             android:name=".SplashScreen"
             android:exported="true"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/SplashTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
